template/child_stack_template/subnet-route.yml
AWSTemplateFormatVersion: 2010-09-09
#   _____         _                   _
#  / ____|       | |                 | |
# | (___   _   _ | |__   _ __    ___ | |_
#  \___ \ | | | || '_ \ | '_ \  / _ \| __|
#  ____) || |_| || |_) || | | ||  __/| |_
# |_____/  \__,_||_.__/ |_| |_| \___| \__|
Resources:
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !ImportValue CreateVpc
      InternetGatewayId: !ImportValue CreateIgw
  PublicSubnet1a:
    Type: AWS::EC2::Subnet
    DependsOn: VPCGatewayAttachment
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: cfn-training-publicsubnet1a
      VpcId: !ImportValue CreateVpc
  PublicSubnet1c:
    Type: AWS::EC2::Subnet
    DependsOn: VPCGatewayAttachment
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: cfn-training-publicsubnet1c
      VpcId: !ImportValue CreateVpc
  PublicSubnet1d:
    Type: AWS::EC2::Subnet
    DependsOn: VPCGatewayAttachment
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}d
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: cfn-training-publicsubnet1d
      VpcId: !ImportValue CreateVpc
  PrivateSubnet1a:
    Type: AWS::EC2::Subnet
    DependsOn: VPCGatewayAttachment
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}a
      CidrBlock: 10.0.10.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: cfn-training-privatesubnet1a
      VpcId: !ImportValue CreateVpc
  PrivateSubnet1c:
    Type: AWS::EC2::Subnet
    DependsOn: VPCGatewayAttachment
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}c
      CidrBlock: 10.0.11.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: cfn-training-privatesubnet1c
      VpcId: !ImportValue CreateVpc
  PrivateSubnet1d:
    Type: AWS::EC2::Subnet
    DependsOn: VPCGatewayAttachment
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}d
      CidrBlock: 10.0.20.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: cfn-training-privatesubnet1d
      VpcId: !ImportValue CreateVpc
  EIP1a:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: cfn-training-eip-1a
  EIP1c:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: cfn-training-eip-1c
  EIP1d:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: cfn-training-eip-1d
  NATGateway1a:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - EIP1a
          - AllocationId
      SubnetId: !Ref PublicSubnet1a
      Tags:
        - Key: Name
          Value: cfn-training-nat-gateway-1a
  NATGateway1c:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - EIP1c
          - AllocationId
      SubnetId: !Ref PublicSubnet1c
      Tags:
        - Key: Name
          Value: cfn-training-nat-gateway-1c
  NATGateway1d:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - EIP1d
          - AllocationId
      SubnetId: !Ref PublicSubnet1d
      Tags:
        - Key: Name
          Value: cfn-training-nat-gateway-1d
#  _____                 _
# |  __ \               | |
# | |__) |  ___   _   _ | |_   ___
# |  _  /  / _ \ | | | || __| / _ \
# | | \ \ | (_) || |_| || |_ |  __/
# |_|  \_\ \___/  \__,_| \__| \___|
  RouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: VPCGatewayAttachment
    Properties:
      VpcId: !ImportValue CreateVpc
      Tags:
      - Key: Name
        Value: cfn-training-route-table
  InternetGWRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !ImportValue CreateIgw
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: cfn-training-public-route-table
      VpcId: !ImportValue CreateVpc
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !ImportValue CreateIgw
      RouteTableId: !Ref PublicRouteTable
  PrivateRouteTable1a:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: cfn-training-private-route-table-1a
      VpcId: !ImportValue CreateVpc
  PrivateRoute1a:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1a
      RouteTableId: !Ref PrivateRouteTable1a
  PrivateRouteTable1c:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: cfn-training-private-route-table-1c
      VpcId: !ImportValue CreateVpc
  PrivateRoute1c:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1d
      RouteTableId: !Ref PrivateRouteTable1c
  PrivateRouteTable1d:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: cfn-training-private-route-table-1d
      VpcId: !ImportValue CreateVpc
  PrivateRoute1d:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1d
      RouteTableId: !Ref PrivateRouteTable1d
  PublicSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1a
  PublicSubnet1cRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1c
  PublicSubnet1dRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1d
  PrivateSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1a
      SubnetId: !Ref PrivateSubnet1a
  PrivateSubnet1cRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1c
      SubnetId: !Ref PrivateSubnet1c
  PrivateSubnet1dRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1d
      SubnetId: !Ref PrivateSubnet1d
  VPCGatewayEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds:
        - !Ref PrivateRouteTable1a
        - !Ref PrivateRouteTable1c
        - !Ref PrivateRouteTable1d
        - !Ref PublicRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !ImportValue CreateVpc
Outputs:
  PublicSubnet1aOut:
    Value: !Ref PublicSubnet1a
    Export:
      Name: CreatePublicSubnet1a
  PublicSubnet1cOut:
    Value: !Ref PublicSubnet1c
    Export:
      Name: CreatePublicSubnet1c
  PublicSubnet1dOut:
    Value: !Ref PublicSubnet1d
    Export:
      Name: CreatePublicSubnet1d
  PrivateSubnet1aOut:
    Value: !Ref PrivateSubnet1a
    Export:
      Name: CreatePrivateSubnet1a
  PrivateSubnet1cOut:
    Value: !Ref PrivateSubnet1c
    Export:
      Name: CreatePrivateSubnet1c
  PrivateSubnet1dOut:
    Value: !Ref PrivateSubnet1d
    Export:
      Name: CreatePrivateSubnet1d
